--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
